# OdometryFusionCalibration

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONFIG.md  DECISIONS.md  DESIGN.md  GPS_R_NEES_SWEEP.md  HANDOFF.md  ISSUES.md  RADAR_SCAN_ODOMETRY.md  README.md  SLICE15B_BOUNDED_HEADING_INJECTION.md  SLICE15_ROBUST_GPS_UPDATE.md  SLICE16_CENTROID_SUBBIN_READOUT.md  SLICE17B_JOINT_LEVER_SCALE.md  SLICE17_TURN_REGIME_ROTATION_EXTRINSIC.md  SLICE18_MEDIAN_COUPLED_BIAS.md  SLICE19C_HEADING_MONITOR.md  SLICE19_SPLIT_CHANNEL_MEDIAN.md  SLICE20_TRANSLATION_ONLY_LEVER.md  SURROUND_MULTISOURCE_TEST.md  WORKFLOW.md
adapters/: CMakeLists.txt  README.md
adapters/include/ofc_adapters/: config_loader.hpp  csv_source.hpp  file_persistence.hpp  gps_correction.hpp  replay_harness.hpp  ros_node.hpp  threaded_estimator.hpp
adapters/src/: config_loader.cpp  csv_source.cpp  file_persistence.cpp  gps_correction.cpp  replay_harness.cpp  threaded_estimator.cpp
adapters/tests/: adapter_test_util.hpp  test_config_loader.cpp  test_csv_source.cpp  test_file_persistence.cpp  test_gps_correction.cpp  test_main.cpp  test_threaded_estimator.cpp
include/ofc/core/: absolute_ref.hpp  buffer.hpp  calibration.hpp  config.hpp  eskf.hpp  estimator.hpp  heading_monitor.hpp  histogram.hpp  lie.hpp  median.hpp  persistence.hpp  result.hpp  smoother.hpp  source.hpp  status.hpp  timesync.hpp  types.hpp
reviews/: init-p-fix-findings.md  sim-rig-findings.md  slice-10-findings.md  slice-11-findings.md  slice-11b-findings.md  slice-12-findings.md  slice-13-findings.md  slice-14-findings.md  slice-14-qscale-sweep-findings.md  slice-16-findings.md  slice-17-findings.md  slice-17b-findings.md  slice-18-findings.md  slice-19-findings.md  slice-19b-findings.md  slice-19c-findings.md  slice-2-findings.md  slice-20-findings.md  slice-20-review.md  slice-20b-review.md  slice-3-findings.md  slice-4-findings.md  slice-5-findings.md  slice-6-findings.md  slice-7-findings.md  slice-8-findings.md  slice-9-findings.md  slice-csv-replay-findings.md  slice-median-fix-findings.md
scripts/: dev.ps1
sim/: CMakeLists.txt  README.md
sim/include/ofc_sim/: absolute_ref_source.hpp  rig.hpp  synthetic_source.hpp  trajectory.hpp
sim/src/: absolute_ref_source.cpp  rig.cpp  synthetic_source.cpp  trajectory.cpp
src/core/: README.md  buffer.cpp  calibration.cpp  eskf.cpp  estimator.cpp  heading_monitor.cpp  histogram.cpp  lie.cpp  median.cpp  smoother.cpp  timesync.cpp
tests/: CMakeLists.txt  README.md  test_bias.cpp  test_buffer.cpp  test_calib_feedback.cpp  test_calib_joint_lever_scale.cpp  test_calib_phase1.cpp  test_calib_phase2.cpp  test_calib_rot3d.cpp  test_calib_translation_only.cpp  test_calib_vote_guard.cpp  test_chi2_gate.cpp  test_config.cpp  test_correction.cpp  test_cov_calibration.cpp  test_cov_calibration_split.cpp  test_eskf.cpp  test_fusion.cpp  test_heading_monitor.cpp  test_histogram.cpp  test_lie.cpp  test_lifecycle.cpp  test_median.cpp  test_median_split.cpp  test_multi_bias.cpp  test_multi_bias_sim.cpp  test_persistence.cpp  test_placeholder_sweep.cpp  test_sim.cpp  test_smoother.cpp  test_smoother_calib.cpp  test_split_median.cpp  test_timesync.cpp  test_validation.cpp  test_weights.cpp  test_weights_split.cpp
tools/: diag_heading_drift.py  diag_radial_doppler.py  diag_radial_pair.py  diagnose_window.py  euroc_to_csv.py  gps_innovation_analysis.py  inject_calib.py  kaist_surround_synth.py  kaist_to_csv.py  kitti_to_csv.py  motion_stats.py  nuscenes_cam_vo.py  nuscenes_concat.py  nuscenes_gps_from_gt.py  nuscenes_surround.py  nuscenes_surround_concat.py  nuscenes_surround_score.py  nuscenes_to_csv.py  proto_heading_monitor.py  proto_lever_scale.py  proto_radar_lever.py  proto_radial_doppler_yaw.py  proto_radial_lidar_odom.py  proto_rot_handeye.py  radar_scan_odometry.py  radial_to_csv.py  sweep_radial_radar.py  synth_4d_radar.py
tools/ofc_replay/: main.cpp
